# ot-harjoitustyo

./: .coverage  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Tehtava1Monopoli.md  Tehtava2Monopoli.md  Tehtava3Sekvenssikaavio.md  Tehtava4Sekvenssikaavio.md
src/: anti_cheat.py  db.py  main.py  pred_to_terminal.py  predict_to_terminal.py
src/tests/: anti_cheat_test.py  database_test.py
src/ui/: gui.py
