[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Laiho <emillaiho@hotmail.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "1.0.1"
pandas = "^1.4.2"
onnxruntime = "^1.11.0"
joblib = "^1.1.0"
pytest = "^7.1.1"
coverage = "^6.3.2"
invoke = "^1.7.0"
tk = "^0.1.0"
matplotlib = "^3.5.1"
SQLAlchemy = "^1.4.35"
pandastable = "^0.12.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
